Complete Semester entity retirement (Phase 2) — full table drop
Migrations:
- V115: add term_instance_id to lab_schedules, backfill from semester dates
  (ODD = month >= 6, EVEN = month < 6), make NOT NULL + FK, drop semester_id
- V116: drop semester_id from calendar_events and examinations (both nullable)
- V117: DROP TABLE semesters

Backend model changes:
- LabSchedule: replace Semester field/constructor with TermInstance
- CalendarEvent, Examination: remove Semester field, getter, setter
- LabScheduleRequest/Response: semesterId/semesterName → termInstanceId/termInstanceLabel
- CalendarEventRequest: remove semesterId; CalendarEventResponse: remove semester field
- ExaminationRequest/Response: remove semesterId/semesterName
- LabScheduleRepository: findBySemesterId → findByTermInstanceId
- CalendarEventRepository, ExaminationRepository: remove findBySemesterId
- LabScheduleService: SemesterRepository → TermInstanceRepository throughout
- CalendarEventService, ExaminationService: remove SemesterRepository, semester lookup,
  findBySemesterId; strip semester from toResponse()
- CalendarEventController, ExaminationController: remove GET /semester/{id} endpoints

Deleted artifacts:
- Semester.java, SemesterRepository.java, SemesterResponse.java, SemesterStatus.java
- SemesterService.java, SemesterController.java
- SemesterServiceTest.java, SemesterControllerTest.java

Seeders:
- DataLoader + LocalDataSeeder: replace semester creation with manual TermInstance
  creation; update LabSchedule and Examination construction accordingly

Tests: update LabScheduleServiceTest (Semester→TermInstance), CalendarEventServiceTest,
ExaminationServiceTest, ExamResultServiceTest, ReportServiceTest,
CalendarEventControllerTest, ExaminationControllerTest for changed constructors

Frontend:
- lab-schedule.model.ts: semesterId/semesterName → termInstanceId/termInstanceLabel
- lab-schedule-form: fetch /term-instances instead of /semesters; form control,
  patchValue, submit, and preview al